<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProjectActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_project"
        android:textSize="34dp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/text1"
        android:gravity="left"
        android:text="@string/pro_name"
        android:textSize="12dp"
        android:background=""/>

    <EditText
        android:id="@+id/edittext1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/text2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/style_01" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/edittext1"
        android:gravity="left"
        android:text="@string/pro_upload_pic"
        android:textSize="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/line1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="10"
        android:layout_below="@id/text3">

        <TextView
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:background="@drawable/style_01"
            android:padding="4dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_below="@+id/text3"
            android:gravity="left"
            android:onClick="selectFile"
            android:text="@string/select_pic"
            android:textSize="12dp"
            tools:ignore="OnClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:layout_below="@id/text3"
            android:layout_toRightOf="@id/text4"
            android:text="@string/upload" />
    </LinearLayout>


    <TextView
        android:id="@+id/text6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/line1"
        android:gravity="left"
        android:text="@string/portofolio_upload"
        android:textSize="12dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/line2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="10"
        android:layout_below="@id/text6">

        <TextView
            android:id="@+id/text5"
            android:layout_width="match_parent"
            android:padding="4dp"
            android:background="@drawable/style_01"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text3"
            android:layout_weight="5"
            android:gravity="left"
            android:onClick="selectPdf"
            android:text="@string/portofolio_file"
            android:textSize="12dp"
            tools:ignore="OnClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_below="@id/text3"
            android:layout_toRightOf="@id/text4"
            android:text="@string/upload" />
    </LinearLayout>


    <TextView
        android:id="@+id/text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/line2"
        android:gravity="left"
        android:text="@string/summary"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/edittext2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/text7"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/style_01" />
    <TextView
        android:id="@+id/text8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext2"
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:text="@string/category"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/edittext3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/text8"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/style_01" />
    <TextView
        android:id="@+id/text9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext3"
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:text="@string/dateline"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/edittext4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/text9"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/style_01" />
    <TextView
        android:id="@+id/text10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext4"
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:text="@string/fund_target"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/edittext5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/text10"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/style_01" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:id="@+id/line3"
        android:layout_below="@+id/edittext5"
        android:layout_height="wrap_content">
        <CheckBox android:id="@+id/checkbox_meat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term"
            android:onClick="termCheck"
            tools:ignore="OnClick" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@id/line3"
        android:gravity="center"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitProject"
            android:text="@string/btn_pic" />
    </LinearLayout>

</RelativeLayout>
