<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:text="Forgot Password?"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="8sp"
                android:layout_weight="6"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/faq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="2sp"
                    android:text="@string/faq"
                    android:textColorLink="@color/whitey"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/tou"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="2sp"
                    android:text="@string/tou"
                    android:textColorLink="@color/whitey"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="2sp"
                    android:text="@string/privacy"
                    android:textColorLink="@color/whitey"
                    android:textSize="10sp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3pt"
            android:text="We will send you an email to:"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/userMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3pt"
            android:text="@string/userMail"
            android:textStyle="bold|italic"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3pt"
            android:text="to reset your password"
            android:gravity="end"
            android:textSize="20sp"
            android:textColor="#000000"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20pt"
        android:layout_below="@id/linearLay"
        android:background="@drawable/border"
        android:onClick="sendMail"
        android:text="Send "
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
